infras/peer-auth/overlays/dev/peer-auths.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-request-auth

---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: jwt-auth-policy
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: ele-gateway
  action: ALLOW
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
---
